Added requirements for venv, changed to cpu, and changed to huggingface.

--- a/generate.ipynb
+++ b/generate.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Miguel/Desktop/MIT/spring2024/6.5610/project/minGPT/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/Miguel/Desktop/MIT/spring2024/6.5610/project/minGPT/mingpt/bpe.py:75: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "  \"\"\"\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
@@ -23,26 +34,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "use_mingpt = True # use minGPT or huggingface/transformers model?\n",
-    "model_type = 'gpt2-xl'\n",
-    "device = 'cuda'"
+    "use_mingpt = False # use minGPT or huggingface/transformers model?\n",
+    "model_type = 'gpt2'\n",
+    "device = 'cpu'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of parameters: 1557.61M\n"
-     ]
+     "data": {
+      "text/plain": [
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(50257, 768)\n",
+       "    (wpe): Embedding(1024, 768)\n",
+       "    (drop): Dropout(p=0.1, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-11): 12 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2Attention(\n",
+       "          (c_attn): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -54,12 +94,12 @@
     "\n",
     "# ship model to device and set to eval mode\n",
     "model.to(device)\n",
-    "model.eval();"
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,34 +140,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the chief of the criminal investigation department, said during a news conference, \"We still have a lot of\n",
+      "Andrej Karpathy, the founder of an internet company whose members are also accused of selling illicit videos to minors.\n",
+      "\n",
+      "The\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the man whom most of America believes is the architect of the current financial crisis. He runs the National Council\n",
+      "Andrej Karpathy, the president of the International Brotherhood, said Thursday that it will ask the U.S. to suspend its\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the head of the Department for Regional Reform of Bulgaria and an MP in the centre-right GERB party\n",
+      "Andrej Karpathy, the former head of the National Science Foundation from 2011 until his retirement in January 2016, also has a book\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the former head of the World Bank's IMF department, who worked closely with the IMF. The IMF had\n",
+      "Andrej Karpathy, the new owner of a business, told the Toronto Star that the company would only take delivery of up to\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the vice president for innovation and research at Citi who oversaw the team's work to make sense of the\n",
+      "Andrej Karpathy, the head of the parliamentary delegation overseeing the deal, also told BBC News: \"This was very disappointing.\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the CEO of OOAK Research, said that the latest poll indicates that it won't take much to\n",
+      "Andrej Karpathy, the head of the UMP, said it was not clear when the committee would rule on further investigation into\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the former prime minister of Estonia was at the helm of a three-party coalition when parliament met earlier this\n",
+      "Andrej Karpathy, the director of the Karpathy Institute's Center for Community Health, said the state needs to do more\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the director of the Institute of Economic and Social Research, said if the rate of return is only 5 per\n",
+      "Andrej Karpathy, the Ukrainian civil society activist who has repeatedly called for the end of what he perceives as Putin's military\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the minister of commerce for Latvia's western neighbour: \"The deal means that our two countries have reached more\n",
+      "Andrej Karpathy, the country's minister for natural resources and environment, has called for a halt because it does not have enough\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the state's environmental protection commissioner. \"That's why we have to keep these systems in place.\"\n",
-      "\n"
+      "Andrej Karpathy, the only member of the opposition coalition, said the opposition is seeking to \"put people's lives on the\n"
      ]
     }
    ],
@@ -152,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4,
   "vscode": {
